--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "@phosphor-icons/react": "^2.1.10",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
     "@smastrom/react-rating": "^1.5.0",
     "@storybook/react-vite": "^9.1.10",
     "@tsparticles/preset-fire": "^3.2.0",
@@ -51,7 +53,8 @@
     "react-type-animation": "^3.2.0",
     "react-verification-input": "^4.2.2",
     "recharts": "^3.2.1",
-    "swiper": "^11.2.10"
+    "swiper": "^11.2.10",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.1",
