feat: adds VideoSection component and rebuild the main page

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-lottie": "^1.2.10",
     "react-number-format": "^5.4.4",
     "react-photo-view": "^1.2.7",
+    "react-player": "^3.4.0",
     "react-responsive-modal": "^7.0.0",
     "react-select": "^5.10.2",
     "react-signature-canvas": "^1.1.0-alpha.2",
